# snapd-glib

./: .bzrignore  .gitignore  .travis.yml  CONTRIBUTING.md  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  format-source.sh  meson.build  meson_options.txt  snapd-glib.doap
.github/workflows/: check_q_decl_export.yaml  documentation.yaml  format.yaml  pr.yaml  test.yaml
debian/: changelog  control  libsnapd-glib-dev.install  libsnapd-glib1.install  libsnapd-glib1.symbols  libsnapd-qt-dev.install  libsnapd-qt1.install  libsnapd-qt1.symbols  qml-module-snapd.install  rules  snapd-login-service.install  watch
doc/: doc-install.sh  meson.build  settings.toml.in
doc/reference/: Makefile.am  meson.build  snapd-glib-docs.xml  snapd-glib-docs.xml.in  snapd-glib-sections.txt
doc/reference/xml/: gtkdocentities.ent.in  meson.build
examples/: meson.build  snap-glib.c  snapctl-glib.c
po/: LINGUAS  POTFILES.in  am.po  en_GB.po  fi.po  fr.po  it.po  lt.po  meson.build  ru.po  snapd-glib.pot  sr.po  tr.po
snapd-glib/: Makefile.am  glib-compat.h  meson.build  snapd-alias.c  snapd-alias.h  snapd-app.c  snapd-app.h  snapd-assertion.c  snapd-assertion.h  snapd-auth-data.c  snapd-auth-data.h  snapd-autorefresh-change-data.c  snapd-autorefresh-change-data.h  snapd-category-details.c  snapd-category-details.h  snapd-category.c  snapd-category.h  snapd-change-data.c  snapd-change-data.h  snapd-change.c  snapd-change.h  snapd-channel.c  snapd-channel.h  snapd-client-private.h  snapd-client-sync.c  snapd-client.c  snapd-client.h  snapd-connection.c  snapd-connection.h  snapd-enum-types.c.in  snapd-enum-types.h.in  snapd-error.c  snapd-error.h  snapd-glib-0.pc.in  snapd-glib-1.0.pc.in  snapd-glib.h  snapd-glib.map  snapd-glib.pc.in  snapd-icon.c  snapd-icon.h  (+64 more)
snapd-glib/requests/: snapd-get-aliases.c  snapd-get-aliases.h  snapd-get-apps.c  snapd-get-apps.h  snapd-get-assertions.c  snapd-get-assertions.h  snapd-get-buy-ready.c  snapd-get-buy-ready.h  snapd-get-categories.c  snapd-get-categories.h  snapd-get-change.c  snapd-get-change.h  snapd-get-changes.c  snapd-get-changes.h  snapd-get-connections.c  snapd-get-connections.h  snapd-get-find.c  snapd-get-find.h  snapd-get-icon.c  snapd-get-icon.h  snapd-get-interface-info.c  snapd-get-interface-info.h  snapd-get-interfaces-legacy.c  snapd-get-interfaces-legacy.h  snapd-get-interfaces.c  snapd-get-interfaces.h  snapd-get-logs.c  snapd-get-logs.h  snapd-get-model-serial.c  snapd-get-model-serial.h  snapd-get-model.c  snapd-get-model.h  snapd-get-notices.c  snapd-get-notices.h  snapd-get-prompting-request.c  snapd-get-prompting-request.h  snapd-get-prompting-requests.c  snapd-get-prompting-requests.h  snapd-get-sections.c  snapd-get-sections.h  (+56 more)
snapd-glib/tests/: Makefile.am  mock-snapd.c  mock-snapd.h  test.c
snapd-login-service/: Makefile.am  io.snapcraft.SnapdLoginService.policy  io.snapcraft.SnapdLoginService.policy.in  io.snapcraft.SnapdLoginService.service.in  io.snapcraft.SnapdLoginService.xml  snapd-login-service.c
snapd-qt/: Makefile.am  SnapdConfig.cmake.in  SnapdConfigVersion.cmake.in  SnapdQt5Config.cmake.in  SnapdQt6Config.cmake.in  alias.cpp  app.cpp  assertion.cpp  auth-data.cpp  category-details.cpp  category.cpp  change-autorefresh-data.cpp  change-data.cpp  change.cpp  channel.cpp  client-private.h  client.cpp  connection.cpp  icon.cpp  interface.cpp  link.cpp  login.cpp  maintenance.cpp  markdown-node.cpp  markdown-parser.cpp  media.cpp  meson.build  notice.cpp  plug-ref.cpp  plug.cpp  price.cpp  qml-plugin.cpp  qml-plugin.h  qmldir  qmldir.in  request.cpp  screenshot.cpp  slot-ref.cpp  slot.cpp  snap.cpp  (+9 more)
snapd-qt/Snapd/: Alias  App  Assertion  AuthData  Category  CategoryDetails  Change  Channel  Client  Connection  Enums  Icon  Interface  Link  Login  Maintenance  MarkdownNode  MarkdownParser  Media  Notice  Plug  PlugRef  Price  Reply  Request  Screenshot  Slot  SlotRef  Snap  SystemInformation  Task  TaskData  UserInformation  WrappedObject  alias.h  app.h  assertion.h  auth-data.h  category-details.h  category.h  (+31 more)
tests/: Makefile.am  meson.build  mock-snapd.c  mock-snapd.h  test-glib.c  test-glib.test.in  test-markdown-glib.c  test-markdown-glib.test.in  test-markdown-qt.cpp  test-markdown-qt.test.in  test-markdown-qt5.test.in  test-markdown-qt6.test.in  test-qt.cpp  test-qt.h  test-qt.test.in  test-qt5.test.in  test-qt6.test.in
